# Rock-Paper-Scissors-Online

./: README.md
rps-client/: CMakeLists.txt  connection.cpp  connection.h  loginconfiguration.cpp  loginconfiguration.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rpsgameclient.cpp  rpsgameclient.h
rps-server/: Makefile  rpsd.c  rpsd.h  rpsd_game_thread.h  rpsd_thread.c  rpsd_thread.h
